...

          _medicineLog = MedicineLog(
            title: title,
            amount: amount,
            time: time.format(context),
            date: DateTime.now().toString(),
            status: 'Taken',
            reasons: reasons,
          );

          text = 'Taken at ${time.format(context)}';
          color = Colors.green;
        },
...
                    color: Theme.of(context).accentColor),
              ),
            ),
            sized(),
            sized(),
            sized(),
            button('onMedicineTime', medicine.title, medicine.amount,
                medicine.time, 'Taken', 'On Time: (${medicine.time})'),
            sized(),
            button('onCurrentTime', medicine.title, medicine.amount,
                time.format(context), 'Taken', 'Now (${time.format(context)})'),
            sized(),
            FlatButton(
...
                    color: Theme.of(context).accentColor),
              ),
            ),
            sized(),
            sized(),
            snoozeButton(
              'snooze1',
              medicine.amount.toString(),
              medicine.type,
              5,
              medicine.title,
              '5 Minutes from ${time.format(context)}',
            ),
...
              ),
            ),
            sized(),
            sized(),
            sized(),
            button('reason1', medicine.title, medicine.amount, medicine.time,
                'Skipped', "Medicine isn't near me"),
            sized(),
            button('reason2', medicine.title, medicine.amount, medicine.time,
                'Skipped', "Forgot/ busy/Asleep"),
            sized(),
            button('reason3', medicine.title, medicine.amount, medicine.time,
                'Skipped', "Ran out of the medicine"),
            sized(),
          ],
        ),
      );
    }
...
                            crossAxisAlignment: CrossAxisAlignment.start,
                            mainAxisAlignment: MainAxisAlignment.spaceAround,
                            children: <Widget>[
                              Column(
                                children: <Widget>[
                                  IconButton(
                                    key: Key('taken'),
                                    icon: Icon(
                                      Icons.check,
                                      color: colors,
                                    ),
                                    iconSize: 35,
                                    onPressed: () {
...
                                  )
                                ],
                              ),
                              Column(
                                children: <Widget>[
                                  IconButton(
                                    key: Key('snooze'),
                                    icon: Icon(Icons.snooze,
                                        color: Color.fromRGBO(240, 208, 0, 1)),
                                    iconSize: 35,
                                    onPressed: () {
                                      _action(context);
                                      setState(() {
...
                                  )
                                ],
                              ),
                              Column(
                                children: <Widget>[
                                  IconButton(
                                    key: Key('skiped'),
                                    icon: Icon(
                                      Icons.cancel,
                                      color: Colors.red,
                                    ),
                                    iconSize: 35,
                                    onPressed: () {
...
