...
class _LoginSignState extends State<LoginSign>
    with SingleTickerProviderStateMixin {
  final GlobalKey<FormState> _formKey = GlobalKey();

  AuthMode _authMode = AuthMode.Login;
  Map<String, String> _authData = {
    'name': '',
    'email': '',
    'password': '',
  };
  var _isLoading = false;
  final _passwordController = TextEditingController();
  AnimationController _controller;
  Animation<Size> _heigtAnimation;

...
                      onSaved: (value) {
                        _authData['password'] = value;
                      },
                    ),
                    if (_authMode == AuthMode.Signup)
                      TextFormField(
                        key: Key('confirm_pass'),
                        enabled: _authMode == AuthMode.Signup,
                        decoration: InputDecoration(
                            labelText: 'Confirm Password',
                            icon: Icon(Icons.lock)),
                        obscureText: true,
                        validator: _authMode == AuthMode.Signup
...
        if (_isLoading)
          CircularProgressIndicator()
        else
          Padding(
            padding: const EdgeInsets.only(left: 150.0),
            child: RaisedButton(
              key: _authMode == AuthMode.Login ? Key('login') : Key('signup'),
              elevation: 8,
              child: Container(
                alignment: Alignment.center,
                height: deviceSize.height * 0.05,
                width: deviceSize.width * 0.2,
                child: Row(
...
                onTap: _launchURL,
              )
            : SizedBox(
                height: deviceSize.height * 0,
              ),
        FlatButton(
          key: Key('switch'),
          child: Text(
              '${_authMode == AuthMode.Login ? "Don't have an account? SIGN UP" : 'Already have an account? LOGIN'} '),
          onPressed: _switchAuthMode,
          padding: EdgeInsets.symmetric(horizontal: 25.0, vertical: 4),
          materialTapTargetSize: MaterialTapTargetSize.shrinkWrap,
          textColor: Theme.of(context).primaryColor,
...
