...
import 'package:provider/provider.dart';
import '../model/Medicine.dart';
import '../model/medicine_prrovider.dart';
import '../widgets/buildCard_widget.dart';

class AddScreen extends StatefulWidget {
  static const routeName = '/add';

  @override
  _AddScreenState createState() => _AddScreenState();
}

class _AddScreenState extends State<AddScreen> {
...
  String date = DateFormat("yyyy-MM-dd").format(dateTime);
  var _editedMedicine = Medicine(
    id: null,
    title: '',
    amount: 0.25,
    time: '',
    interval: 1,
    icon: Icon(
      _icon,
    ),
    color: 0,
    date: DateTime.now().toString(),
    instruction: '',
    note: '',
    type: '',
  );

  String _instruction = "Doesn't matter";
  TimeOfDay _time = TimeOfDay.now();
...
              style: textStyle(Colors.white),
            ),
            actions: <Widget>[
              Padding(
                padding: const EdgeInsets.only(right: 15.0),
                child: IconButton(
                    key: Key('done'),
                    icon: Icon(
                      Icons.check,
                      color: Colors.white,
                    ),
                    onPressed: () async {
                      _save(context);
...
                        Form(
                          key: _form,
                          child: Column(
                            children: <Widget>[
                              buildCard(
                                child: TextFormField(
                                  key: Key('medicineName'),
                                  initialValue: _editedMedicine.title,
                                  decoration:
                                      InputDecoration(labelText: 'Medicine'),
                                  textInputAction: TextInputAction.next,
                                  validator: (value) {
                                    if (value.isEmpty) {
...
                                                    onpressed("Before eating"),
                                                title: "Before eating",
                                                value: 1,
                                              ),
                                              myRadioButton2(
                                                groupValue: _groupValue,
                                                title: "While eating",
                                                onChange:
                                                    onpressed("While eating"),
                                                value: 2,
                                              ),
                                              myRadioButton2(
                                                groupValue: _groupValue,
...
